<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaxiMoblieMultiMediaSystem</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- main page string -->
    <string name="main_temp_tips">滚动信息条</string>
    <string name="scroll_tips">王炜是个好同志，孙瑞锋也是个好同志</string>
    
    <!-- certificate info pane string -->
    <string name="cert_temp_tips">资格证信息界面</string>
    <string name="choose_button">用户选择</string>
    <string name="good_button">满意</string>
    <string name="satisfactory_button">一般</string>
    <string name="unsatisfactory_button">不满意</string>
    <string name="feedback_toast">感谢您的点评，祝您旅途愉快</string>
    
    <!-- driver choose fragment -->
    <string name="photo_desc">driver\'s photo</string>
    
    <!-- multi-media pane string -->
    <string name="media_temp_tips">多媒体信息界面</string>
    
    <!-- driver head view -->
    <string name="header_cancel_btn">返回</string>

</resources>