<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button android:id="@+id/choose_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:text="@string/choose_button"/>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        
        <TextView android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textIsSelectable="true"
            android:text="@string/cert_temp_tips"/>
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        style="?android:attr/buttonBarStyle">
        <Button android:id="@+id/good"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/good_button"
            style="?android:attr/buttonBarButtonStyle"/>
        
        <Button android:id="@+id/satisfactory"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/satisfactory_button"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button android:id="@+id/unsatisfactory"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/unsatisfactory_button"
            style="?android:attr/buttonBarButtonStyle"/>        
    </LinearLayout>

</LinearLayout>